mule-user-guide/v/3.5/enabling-maven-support-for-a-studio-project.adoc
= Enabling Maven Support for a Studio Project
:keywords: anypoint studio, maven

You may wish to take a Mule project that was already created in Anypoint Studio and add http://maven.apache.org/[Maven] functionality to it. Maven can make your project more easily shareable with other developers as it takes care of its dependencies and helps automate your project's build process.

This page describes how to use Studio's native support for the "mavenization" of a Mule project. 

== Mavenizing an Existing Mule Project

If you have an existing Studio project that was created without Maven support enabled, you can still add Maven support to it by "Mavenizing" it. 

. Left-click the name of your project in the Package Explorer.

. Select **Mule > Mavenize**.
+
image:1-1.png[1-1]

. Studio presents a confirmation dialog, warning that although Maven support can later be disabled, this will not reset your project's classpath. Click *Yes* to confirm.
+
image:Studio-mavenize-warning.png[Studio-mavenize-warning]

. Studio creates a *pom.xml* file for your project. You can observe the progress in the console.

. When the mavenization process is complete, the pom.xml file for your project appears in the Package Explorer underneath the mule-project.xml file.
+
image:2-1.png[2-1]

== Running a Mavenized Project

You can now run your project on the embedded server in Anypoint Studio either as a Mule Application or as a Mule Application with Maven. You can also package your Mule project from the command line by executing the following syntax:

`mvn package`

The maven-mule-plugin packages the project in a `.``zip` file and places it in a /target folder.  Copy the `.zip` file to the `apps` folder of your standalone Mule ESB instance to run the application.

== See Also 

* Learn how to migrate link:/mule-user-guide/v/3.6/importing-a-maven-project-into-studio[a Maven project into Studio].

* Learn how to link:/mule-user-guide/v/3.6/building-a-mule-application-with-maven-in-studio[build new Maven projects] directly in Studio.

* Learn how to create a link:/mule-user-guide/v/3.6/preparing-a-gitignore-file[gitignore] file if you want to implement Git.

* Explore how to use link:/anypoint-studio/v/5/using-subversion-with-studio[Studio and Subversion].
